# website

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
public/: quotes.txt
public/static/: styles.css
public/templates/: base.html
public/templates/error/: 404.html
public/templates/root/: about.html  contact.html  index.html  projects.html
src/: entry.py  lib.py
